Вставка картинок. Часть 1

--- a/source/less/blocks/index-wrapper.less
+++ b/source/less/blocks/index-wrapper.less
@@ -1,7 +1,29 @@
+.index-wrapper {
+  position: relative;
+}
+
 @media (min-width: @desktop-width) {
   .index-wrapper {
-    background-image: url("../img/index-background-mobile@1x.jpg");
+    z-index: 2;
+    background-image: url("../img/index-background-desktop@1x.jpg");
     background-repeat: no-repeat;
     background-position: top right;
+
+    @media(min-resolution: 144dpi),
+        (min-resolution: 1.5dppx) {
+          background-image: url("../img/index-background-desktop@2x.jpg");
+          background-size: 680px 696px;
+    }
   }
+
+  /*.index-wrapper::after {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    width: 900px;
+    height: 696px;
+    top: 0;
+    right: 0;
+    background-color: #64a83b;
+  }*/
 }
