--- a/source/less/blocks/process.less
+++ b/source/less/blocks/process.less
@@ -28,6 +28,45 @@
   width: 60px;
   height: 60px;
   background-color: @set-bg-green;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 50px 50px;
+}
+
+.process__item--nutrients::before {
+  background-image: url("../img/advantage-leaf@1x.png");
+
+  @media(min-resolution: 144dpi),
+      (min-resolution: 1.5dppx) {
+        background-image: url("../img/advantage-leaf@2x.png");
+  }
+}
+
+.process__item--powder::before {
+  background-image: url("../img/advantage-powder@1x.png");
+
+  @media(min-resolution: 144dpi),
+      (min-resolution: 1.5dppx) {
+        background-image: url("../img/advantage-powder@2x.png");
+  }
+}
+
+.process__item--replace::before {
+  background-image: url("../img/advantage-dining@1x.png");
+
+  @media(min-resolution: 144dpi),
+      (min-resolution: 1.5dppx) {
+        background-image: url("../img/advantage-dining@2x.png");
+  }
+}
+
+.process__item--results::before {
+  background-image: url("../img/advantage-clock@1x.png");
+
+  @media(min-resolution: 144dpi),
+      (min-resolution: 1.5dppx) {
+        background-image: url("../img/advantage-clock@2x.png");
+  }
 }
 
 .process__text {
