--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   min-height: 705px; /*временно, потом убрать*/
-  .set-padding(18px, 20px, 22px, 20px);
+  .set-padding(18px, 0, 22px, 0);
 }
 
 .example__column {
@@ -18,14 +18,17 @@
 
 .example__title {
   padding: 0;
+  .set-padding(0, 20px, 0, 20px);
   .set-margin(0, 0, 25px, 0);
 }
 
 .example__description {
   margin: 0;
+  .set-padding(0, 20px, 0, 20px);
 }
 
 .example__statistics {
+  .set-padding(0, 20px, 0, 20px);
   .set-margin(25px, 0, 35px, 0);
 }
 
@@ -45,6 +48,7 @@
 }
 
 .example__statistics-value {
+  text-transform: uppercase;
   line-height: 24px;
 }
 
@@ -61,14 +65,29 @@
 }
 
 .example__expenses {
-  margin: 0;
+  .set-margin(0, 0, 33px, 0);
   text-align: center;
   line-height: 20px;
 }
 
+.example__image-picture {
+  display: flex;
+  width: 320px;
+  overflow: hidden;
+}
+
+.example__expenses-text {
+  .set-margin(0, 5px, 0, 0);
+}
+
+.example__image {
+  display: block;
+  flex-shrink: 0;
+}
+
 .example__before-after {
   width: 100%;
-  margin-top: auto;
+  .set-margin(20px, 0, 0, 0);
 }
 
 @media (min-width: @tablet-width) {
@@ -81,17 +100,23 @@
   .example__wrapper {
     width: @tablet-width;
     min-height: 1080px;
-    .set-padding(43px, 30px, 0, 30px);
+    .set-padding(43px, 0, 0, 0);
   }
 
   .example__title {
+    .set-padding(0, 30px, 0, 30px);
     .set-margin(0, 0, 63px, 0);
+  }
+
+  .example__description {
+    .set-padding(0, 30px, 0, 30px);
   }
 
   .example__middle {
     display: flex;
     align-items: center;
     .set-margin(52px, 0, 50px, 0);
+    .set-padding(0, 20px, 0, 20px);
   }
 
   .example__statistics {
@@ -123,6 +148,14 @@
     margin-left: auto;
     text-align: right;
     line-height: 28px;
+  }
+
+  .example__image-picture {
+    width: 690px;
+  }
+
+  .example__image--after {
+    margin-left: -500px;
   }
 }
 
