Вставка картинок. Часть 3

--- a/source/less/blocks/before-after.less
+++ b/source/less/blocks/before-after.less
@@ -45,6 +45,7 @@
 
   .before-after__switch {
     position: relative;
+    .set-margin(0, 19px, 0, 17px);
     width: 428px;
     height: 7px;
     border: none;
