--- a/source/less/blocks/present.less
+++ b/source/less/blocks/present.less
@@ -4,9 +4,15 @@
 
 .present-wrapper {
   display: flex;
+  width: 280px;
   height: 289px;
   background-image: url("../img/gift-photo-mobile@1x.jpg");
   background-repeat: no-repeat;
+
+  @media(min-resolution: 144dpi),
+  (min-resolution: 1.5dppx) {
+    background-image: url("../img/gift-photo-mobile@2x.jpg");
+  }
 }
 
 .present__text {
@@ -29,7 +35,12 @@
     justify-content: flex-end;
     width: 100%;
     height: 200px;
-    background: @set-bg-green;
+    background-image: url("../img/gift-photo-tablet@1x.jpg");
+
+    @media(min-resolution: 144dpi),
+    (min-resolution: 1.5dppx) {
+      background-image: url("../img/gift-photo-tablet@2x.jpg");
+    }
   }
 
   .present__text {
@@ -46,6 +57,12 @@
   .present-wrapper {
     width: 244px;
     height: 289px;
+    background-image: url("../img/gift-photo-desktop@1x.jpg");
+
+    @media(min-resolution: 144dpi),
+    (min-resolution: 1.5dppx) {
+      background-image: url("../img/gift-photo-desktop@2x.jpg");
+    }
   }
 
   .present__text {
