Фоновое изображение кота на главной в десктопе

--- a/source/less/blocks/main-navigation.less
+++ b/source/less/blocks/main-navigation.less
@@ -56,6 +56,11 @@
 }
 
 @media (min-width: @desktop-width) {
+  .main-navigation {
+    position: relative;
+    z-index: 2;
+  }
+
   .main-navigation__list {
     width: 480px;
     .set-padding(0, 0, 10px, 0);
