--- a/source/less/blocks/index-wrapper.less
+++ b/source/less/blocks/index-wrapper.less
@@ -4,26 +4,33 @@
 
 @media (min-width: @desktop-width) {
   .index-wrapper {
-    z-index: 2;
-    background-image: url("../img/index-background-desktop@1x.jpg");
-    background-repeat: no-repeat;
-    background-position: top right;
-
-    @media(min-resolution: 144dpi),
-        (min-resolution: 1.5dppx) {
-          background-image: url("../img/index-background-desktop@2x.jpg");
-          background-size: 680px 696px;
-    }
+    top: 0;
+    width: 100%;
+    height: 696px;
+    background: linear-gradient(to right, #ffffff 52.5%, #64a83b 48%);
   }
 
-  /*.index-wrapper::after {
-    content: "";
+  .index-wrapper::after {
+    content:"";
     position: absolute;
-    z-index: -1;
-    width: 900px;
+    width: 680px;
     height: 696px;
     top: 0;
     right: 0;
-    background-color: #64a83b;
-  }*/
+    margin-right: -70px;
+    background-image: url(../img/index-background-desktop@1x.jpg);
+
+    @media(min-resolution: 144dpi),
+    (min-resolution: 1.5dppx) {
+      background-image: url("../img/index-background-desktop@2x.jpg");
+      background-size: 680px 696px;
+    }
+  }
 }
+
+@media (min-width: 1450px) {
+  .index-wrapper::after {
+    margin-right: 0;
+  }
+}
+
