--- a/source/less/blocks/before-after.less
+++ b/source/less/blocks/before-after.less
@@ -9,6 +9,11 @@
   line-height: 20px;
 }
 
+.before-after__text--before {
+  position: relative;
+  right: 8px;
+}
+
 .before-after__switch {
   display: flex;
   align-items: center;
