--- a/source/less/blocks/catalog-additional.less
+++ b/source/less/blocks/catalog-additional.less
@@ -153,7 +153,7 @@
   }
 
   .catalog-additional__title {
-    margin-left: 40px;
+    .set-margin(0, 0, 0, 0);
     .set-padding(52px, 40px, 79px, 40px);
   }
 
