--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -22,7 +22,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    .set-padding(0px, 30px, px, 30px);
+    .set-padding(0px, 30px, 0, 30px);
     min-height: 150px;
   }
 
@@ -38,19 +38,25 @@
     position: relative;
   }
 
+  .page-footer__contacts {
+    position: absolute;
+    z-index: 2;
+    width: @desktop-width;
+    left: 50vw;
+    margin-left: -650px;
+    top: 95px;
+  }
+
+  .page-footer__contacts .contacts__wrapper {
+    width: 570px;
+    .set-margin(0px, 0, 0, 32px);
+  }
+
   .page-footer__bottom-wrapper {
     width: @desktop-width;
   }
 
-  .page-footer__contacts {
-    position: absolute;
-    z-index: 2;
-    width: 570px;
-    left: 110px;
-    top: 95px;
-  }
-
   .page-footer__bottom {
-    .set-padding(0px, 110px, px, 110px);
+    .set-padding(0, 110px, 0, 110px);
   }
 }
