--- a/source/less/blocks/present.less
+++ b/source/less/blocks/present.less
@@ -1,4 +1,5 @@
 .present {
+  min-width: 320px;
   .set-padding(40px, 0, 9px, 0);
 }
 
@@ -58,6 +59,7 @@
   }
 
   .present-wrapper {
+    margin: 0;
     width: 244px;
     height: 289px;
     background-image: url("../img/gift-photo-desktop@1x.jpg");
