--- a/source/less/blocks/process.less
+++ b/source/less/blocks/process.less
@@ -122,11 +122,15 @@
     position: absolute;
     z-index: -1;
     top: 0;
-    right: 90px;
+    right: 73px;
     margin-top: 90px;
     font-family: @set-font-family-additional;
     font-size: 281px;
     color: #f2f2f2;
+  }
+
+  .process__item--nutrients::after {
+  right: 90px;
   }
 
   .process__text {
@@ -152,6 +156,10 @@
   }
 
   .process__item::after {
-    right: 10px;
+    right: -2px;
+  }
+
+  .process__item--nutrients::after {
+  right: 15px;
   }
 }
