--- a/source/less/blocks/index-wrapper.less
+++ b/source/less/blocks/index-wrapper.less
@@ -11,17 +11,17 @@
   }
 
   .index-wrapper::after {
-    content:"";
+    content: "";
     position: absolute;
     width: 680px;
     height: 696px;
     top: 0;
     right: 0;
     margin-right: -70px;
-    background-image: url(../img/index-background-desktop@1x.jpg);
+    background-image: url("../img/index-background-desktop@1x.jpg");
 
-    @media(min-resolution: 144dpi),
-    (min-resolution: 1.5dppx) {
+    @media (min-resolution: 144dpi),
+      (min-resolution: 1.5dppx) {
       background-image: url("../img/index-background-desktop@2x.jpg");
       background-size: 680px 696px;
     }
