--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -54,9 +54,6 @@
 
   .page-footer__bottom-wrapper {
     width: @desktop-width;
-  }
-
-  .page-footer__bottom {
-    .set-padding(0, 110px, 0, 110px);
+    .centerer();
   }
 }
