--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -6,7 +6,7 @@
   width: @mobile-width;
   .centerer();
   min-height: 236px;
-  .set-padding(22px, 20px, 22px, 20px);
+  .set-padding(22px, 20px, 0, 20px);
 }
 
 .page-footer__company-name {
