--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -10,7 +10,7 @@
 
 @media (min-width: @tablet-width) {
   .page-header {
-    min-width: @tablet-width;
+    width: @tablet-width;
     display: flex;
     justify-content: space-between;
     align-items: center;
