--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -36,6 +36,30 @@
   background-color: @set-bg-green;
 }
 
+.programs__title::after {
+  content: "";
+  position: absolute;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.programs__item--slim .programs__title::after {
+  top: -8px;
+  left: 2px;
+  width: 50px;
+  height: 50px;
+  background-image: url("../img/icon-cat-slim.svg");
+}
+
+.programs__item--pro .programs__title::after {
+  width: 67px;
+  height: 67px;
+  top: -14px;
+  left: -6px;
+  background-image: url("../img/icon-cat-pro.svg");
+}
+
+
 .programs__text {
   .set-padding(0, 0, 22px, 0);
   .set-margin(14px, 0, 20px, 0);
@@ -44,6 +68,23 @@
 
 .programs__catalog-link {
   line-height: 16px;
+}
+
+.programs__arrow-icon,
+.programs__arrow-long-icon {
+  .set-margin(0, 0, 0, 7px);
+}
+
+.programs__arrow-long-icon {
+  display: none;
+}
+
+.programs__catalog-link:hover .programs__arrow-icon {
+  display: none;
+}
+
+.programs__catalog-link:hover .programs__arrow-long-icon {
+  display: inline;
 }
 
 .programs__catalog-link:active {
@@ -74,6 +115,20 @@
     left: 392px;
     width: 200px;
     height: 200px;
+  }
+
+  .programs__item--slim .programs__title::after {
+    top: 5px;
+    left: 396px;
+    width: 195px;
+    height: 195px;
+  }
+
+  .programs__item--pro .programs__title::after {
+    top: -18px;
+    left: 360px;
+    width: 267px;
+    height: 267px;
   }
 
   .programs__text {
@@ -112,6 +167,20 @@
     left: 1px;
     width: 100px;
     height: 100px;
+  }
+
+  .programs__item--slim .programs__title::after {
+    top: -8px;
+    left: 2px;
+    width: 97px;
+    height: 97px;
+  }
+
+  .programs__item--pro .programs__title::after {
+    top: -19px;
+    left: -16px;
+    width: 133px;
+    height: 133px;
   }
 
   .programs__text {
