--- a/source/less/blocks/show-more.less
+++ b/source/less/blocks/show-more.less
@@ -1,4 +1,5 @@
 .show-more__wrapper {
+  position: relative;
   width: @mobile-width;
   .centerer();
   .set-padding(25px, 20px, 25px, 20px);
@@ -6,7 +7,7 @@
 
 .show-more__title {
   width: 100%;
-  .set-margin(54px, 0, 8px, 0);
+  .set-margin(0, 0, 8px, 0);
   text-align: center;
   line-height: 20px;
 }
@@ -17,6 +18,14 @@
   text-align: center;
   .set-font-size(12px);
   line-height: 16px;
+}
+
+.show-more__plus {
+  display: block;
+  .set-margin(0, auto, 19px, auto);
+  border: none;
+  background-color: #ffffff;
+  cursor: pointer;
 }
 
 .show-more__button {
@@ -67,6 +76,17 @@
     .set-font-size (16px);
     line-height: 18px;
     .set-margin(0, 0, 85px, 0);
+  }
+
+  .show-more__plus {
+    width: 66px;
+    height: 60px;
+    .set-margin(0, auto, 50px, auto);
+  }
+
+  .show-more__icon {
+    width: 60px;
+    height: 60px;
   }
 
   .show-more__button {
