--- a/source/less/blocks/socials.less
+++ b/source/less/blocks/socials.less
@@ -1,10 +1,31 @@
 .socials {
-  height: 63px;
+  min-height: 63px;
+  .set-padding(25px, 30px, 14px, 20px);
   border-bottom: 1px solid #d9d9d9;
 }
 
 .socials__list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   .list-reset();
+}
+
+.socials__item:not(:last-child) {
+  .set-margin(0, 39px, 0, 0);
+}
+
+.socials__item:hover .socials__vk-icon,
+.socials__item:hover .socials__fb-icon,
+.socials__item:hover .socials__insta-icon {
+  fill: @set-bg-green;
+}
+
+.socials__item:active .socials__vk-icon,
+.socials__item:active .socials__fb-icon,
+.socials__item:active .socials__insta-icon {
+  opacity: 0.3;
+  fill: @set-bg-green;
 }
 
 @media (min-width: @tablet-width) {
