--- a/source/less/blocks/socials.less
+++ b/source/less/blocks/socials.less
@@ -1,6 +1,6 @@
 .socials {
   min-height: 63px;
-  .set-padding(25px, 30px, 14px, 20px);
+  .set-padding(25px, 10px, 0, 0);
   border-bottom: 1px solid #d9d9d9;
 }
 
@@ -15,15 +15,11 @@
   .set-margin(0, 39px, 0, 0);
 }
 
-.socials__item:hover .socials__vk-icon,
-.socials__item:hover .socials__fb-icon,
-.socials__item:hover .socials__insta-icon {
+.socials__item:hover .socials__icon {
   fill: @set-bg-green;
 }
 
-.socials__item:active .socials__vk-icon,
-.socials__item:active .socials__fb-icon,
-.socials__item:active .socials__insta-icon {
+.socials__item:active .socials__icon {
   opacity: 0.3;
   fill: @set-bg-green;
 }
@@ -31,6 +27,30 @@
 @media (min-width: @tablet-width) {
   .socials {
     height: auto;
+    .set-padding(25px, 30px, 25px, 41px);
     border-bottom: none;
+  }
+
+  .socials__list {
+    align-items: center;
+  }
+
+  .socials__item:not(:last-child) {
+    .set-margin(0, 28px, 0, 0);
+  }
+
+  .socials__icon--vk {
+    width: 32px;
+    height: 22px;
+  }
+
+  .socials__icon--inst {
+    width: 24px;
+    height: 24px;
+  }
+
+  .socials__icon--fb {
+    width: 15px;
+    height: 30px;
   }
 }
