--- a/source/less/blocks/socials.less
+++ b/source/less/blocks/socials.less
@@ -27,7 +27,7 @@
 @media (min-width: @tablet-width) {
   .socials {
     height: auto;
-    .set-padding(25px, 30px, 25px, 41px);
+    .set-padding(0, 30px, 20px, 47px);
     border-bottom: none;
   }
 
