--- a/source/less/blocks/before-after.less
+++ b/source/less/blocks/before-after.less
@@ -62,6 +62,7 @@
     height: 34px;
     border-radius: 50%;
     position: absolute;
+    top: -12px;
     left: 50%;
     margin-left: -17px;
     background-color: @set-color-white;
