--- a/source/less/blocks/catalog-main.less
+++ b/source/less/blocks/catalog-main.less
@@ -29,6 +29,7 @@
 }
 
 .catalog-main__item-title {
+  display: block;
   margin: 0;
   width: 80px;
   .set-padding(21px, 0, 13px, 0);
@@ -87,7 +88,7 @@
     align-items: center;
     justify-content: flex-end;
     width: calc(384px - 60px);
-    min-height: 571px;
+    height: 571px;
     .set-margin(0, 30px, 0, 30px);
     .set-padding(40px, 0, 38px, 0);
     background: linear-gradient(to top, #f2f2f2 431px, transparent 431px);
