--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -11,14 +11,13 @@
   width: @mobile-width;
   .centerer();
   display: flex;
-  justify-content: space-between;
   min-height: 114px;
   .set-padding(30px, 20px, 15px, 20px);
 }
 
 .contacts__text {
   width: 115px;
-  margin: 0;
+  .set-margin(0, 30px, 0, 0);
   line-height: 20px;
 }
 
@@ -40,6 +39,7 @@
 
   .contacts__text {
     width: 175px;
+    .set-margin(0, 305px, 0, 0);
     line-height: 25px;
   }
 
@@ -63,6 +63,10 @@
   .page-footer .contacts__wrapper {
     .set-padding(65px, 75px, 58px, 75px);
     background-color: #ffffff;
+  }
+
+  .contacts__text {
+    .set-margin(0, 80px, 0, 0);
   }
 
   .contacts__adress {
