--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -23,15 +23,14 @@
     width: @tablet-width;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    .set-padding(0px, 30px, 0, 30px);
+    .set-padding(60px, 30px, 0, 30px);
     min-height: 150px;
   }
 
   .page-footer__company-name {
     width: auto;
     height: 100%;
-    .set-padding(0, 0, 0, 0);
+    .set-padding(5px, 0, 0, 0);
     border-bottom: none;
   }
 }
@@ -57,7 +56,7 @@
 
   .page-footer__bottom-wrapper {
     width: @desktop-width;
-    .set-padding(0px, 40px, 0, 40px);
+    .set-padding(60px, 40px, 0, 40px);
     .centerer();
   }
 }
