--- a/source/less/blocks/present.less
+++ b/source/less/blocks/present.less
@@ -28,7 +28,7 @@
 
 .present__text {
   width: 170px;
-  .set-margin(auto, auto, 43px, auto);
+  .set-margin(186px, auto, 43px, auto);
   .set-font-size(16px);
   color: @set-color-white;
   line-height: 20px;
@@ -90,7 +90,7 @@
   }
 
   .present__text {
-    .set-margin(auto, auto, 43px, auto);
+    .set-margin(186px, 37px, 43px, 37px);
     text-align: center;
   }
 }
