--- a/source/less/blocks/show-more.less
+++ b/source/less/blocks/show-more.less
@@ -50,7 +50,7 @@
     align-items: center;
     justify-content: flex-end;
     width: calc(384px - 60px);
-    min-height: 571px;
+    height: 571px;
     .set-margin(0, 30px, 0, 30px);
     background: none;
   }
@@ -62,7 +62,7 @@
     align-items: center;
     justify-content: flex-end;
     min-height: 432px;
-    .set-padding(40px, 38px, 37px, 38px);
+    .set-padding(55px, 38px, 37px, 38px);
     border: 1px solid #e6e6e6;
   }
 
