--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -202,6 +202,7 @@
   .example {
     background: linear-gradient(to bottom, #ffffff 29%, transparent 29%),
       linear-gradient(to left, #eaeaea 50%, #f2f2f2 50%);
+    border-top: 0;
   }
 
   .example__wrapper {
