--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,5 +1,6 @@
 @import "normalize.less";
 @import "variables.less";
+@import "fonts.less";
 @import "mixins.less";
 @import "general.less";
 @import "blocks/text.less";
