--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,4 +1,4 @@
-@set-font-family-main: "Arial", sans-serif;
+@set-font-family-main: "Arial", "Tahoma", sans-serif;
 
 @set-font-family-additional: "Oswald Regular", "Arial", sans-serif;
 
