--- a/source/less/blocks/main-navigation.less
+++ b/source/less/blocks/main-navigation.less
@@ -13,7 +13,8 @@
 .main-navigation__link {
   display: block;
   .set-padding(22px, 10px, 23px, 10px);
-  font-family: @set-font-family-menu;
+  font-family: @set-font-family-additional;
+  font-weight: 500;
   .set-font-size (20px);
   line-height: 20px;
   border-bottom: 1px solid #e6e6e6;
