--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,8 +1,6 @@
 @set-font-family-main: "Arial", "Tahoma", sans-serif;
 
-@set-font-family-additional: "Oswald Regular", "Arial", sans-serif;
-
-@set-font-family-menu: "Oswald Medium", "Arial", sans-serif;
+@set-font-family-additional: "Oswald", "Arial", sans-serif;
 
 @set-color-main: #444444;
 
