Исправление критерия Б8. Шрифты

--- a/source/less/blocks/main-navigation.less
+++ b/source/less/blocks/main-navigation.less
@@ -14,7 +14,7 @@
   display: block;
   .set-padding(22px, 10px, 23px, 10px);
   font-family: @set-font-family-additional;
-  font-weight: 500;
+  font-weight: bold;
   .set-font-size (20px);
   line-height: 20px;
   border-bottom: 1px solid #e6e6e6;
@@ -45,6 +45,7 @@
     position: relative;
     .set-padding(0, 0, 0, 0);
     font-family: @set-font-family-additional;
+    font-weight: normal;
     .set-font-size (18px);
     line-height: 25px;
     border-bottom: 0;
