--- a/source/less/fonts.less
+++ b/source/less/fonts.less
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: 'Oswald';
-    font-weight: 500;
+    font-weight: bold;
     font-style: normal;
     src: url("../fonts/Oswald Medium.woff2") format("woff2"),
       url("../fonts/Oswald Medium.woff") format("woff");
