Исправление критерия Д6. Фоновый цвет

--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -19,6 +19,7 @@
   margin-left: -160px;
   width: 320px;
   height: 364px;
+  background-color: @set-bg-grey;
   background-image: url("../img/bg-map-mobile@1x.png");
   background-repeat: no-repeat;
   background-position: center;
