--- a/source/less/blocks/present.less
+++ b/source/less/blocks/present.less
@@ -9,6 +9,7 @@
   display: flex;
   width: 280px;
   height: 289px;
+  background-color: @set-bg-green;
   background-image: url("../img/gift-photo-mobile@1x.jpg");
   background-repeat: no-repeat;
 
