Исправление критерия Д11. & и единообразие кода

--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -218,11 +218,11 @@
   .example__column {
     flex-shrink: 0;
     width: 610px;
+  }
 
-    &--cat {
-      width: 690px;
-      margin-left: -22px;
-    }
+  .example__column--cat {
+    width: 690px;
+    margin-left: -22px;
   }
 
   .example__title {
