--- a/source/less/blocks/process.less
+++ b/source/less/blocks/process.less
@@ -98,15 +98,15 @@
     height: 228px;
     .set-padding(113px, 0, 0, 0);
     .set-margin(0, 0, 88px, 0);
+  }
 
-    &--odd {
-      .set-margin(0, 65px, 88px, 0);
-    }
+  .process__item--odd {
+    .set-margin(0, 65px, 88px, 0);
+  }
 
-    &--results,
-    &--replace {
-      margin-bottom: 40px;
-    }
+  .process__item--results,
+  .process__item--replace {
+    margin-bottom: 40px;
   }
 
   .process__item::before {
@@ -149,10 +149,10 @@
   .process__item {
     width: 245px;
     .set-margin(0, 80px, 20px, 0);
+  }
 
-    &--results {
-      .set-margin(0, 0, 20px, 0);
-    }
+  .process__item--results {
+    .set-margin(0, 0, 20px, 0);
   }
 
   .process__item::after {
