--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -7,10 +7,10 @@
 .programs__item {
   .set-padding(20px, 20px, 18px, 20px);
   background-color: @set-bg-grey;
+}
 
-  &--slim {
-    .set-margin(0, 0, 20px, 0);
-  }
+.programs__item--slim {
+  .set-margin(0, 0, 20px, 0);
 }
 
 .programs__list {
@@ -59,7 +59,6 @@
   background-image: url("../img/icon-cat-pro.svg");
 }
 
-
 .programs__text {
   .set-padding(0, 0, 22px, 0);
   .set-margin(14px, 0, 20px, 0);
@@ -99,10 +98,10 @@
 
   .programs__item {
     .set-padding(50px, 53px, 56px, 53px);
+  }
 
-    &--slim {
-      .set-margin(0, 0, 30px, 0);
-    }
+  .programs__item--slim {
+    .set-margin(0, 0, 30px, 0);
   }
 
   .programs__title {
@@ -151,10 +150,10 @@
   .programs__item {
     width: 569px;
     .set-padding(50px, 52px, 55px, 52px);
+  }
 
-    &--odd {
-      .set-margin(0, 81px, 0, 0);
-    }
+  .programs__item--odd {
+    .set-margin(0, 81px, 0, 0);
   }
 
   .programs__title {
