--- a/source/less/blocks/text.less
+++ b/source/less/blocks/text.less
@@ -4,39 +4,39 @@
   font-weight: normal;
   color: @set-color-black;
   text-transform: uppercase;
+}
 
-  &--title {
-    .set-font-size (title,14px);
-    line-height: 60px;
-    text-transform: none;
-  }
+.text--title {
+  .set-font-size (title,14px);
+  line-height: 60px;
+  text-transform: none;
+}
 
-  &--subtitle {
-    .set-font-size (subtitle,14px);
-    line-height: 24px;
-    text-transform: none;
-  }
+.text--subtitle {
+  .set-font-size (subtitle,14px);
+  line-height: 24px;
+  text-transform: none;
+}
 
-  &--bigger {
-    .set-font-size (bigger,14px);
-  }
+.text--bigger {
+  .set-font-size (bigger,14px);
 }
 
 @media (min-width: @tablet-width) {
   .text {
     .set-font-size (20px);
+  }
 
-    &--title {
-      .set-font-size (60px);
-    }
+  .text--title {
+    .set-font-size (60px);
+  }
 
-    &--subtitle {
-      .set-font-size (36px);
-      line-height: 38px;
-    }
+  .text--subtitle {
+    .set-font-size (36px);
+    line-height: 38px;
+  }
 
-    &--bigger {
-      .set-font-size (20px);
-    }
+  .text--bigger {
+    .set-font-size (20px);
   }
 }
