Исправление критерия Д23. Оптимизация загрузки шрифтов

--- a/source/less/fonts.less
+++ b/source/less/fonts.less
@@ -2,6 +2,7 @@
     font-family: 'Oswald';
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
     src: url("../fonts/Oswald.woff2") format("woff2"),
       url("../fonts/Oswald.woff") format("woff");
 }
@@ -10,6 +11,7 @@
     font-family: 'Oswald';
     font-weight: bold;
     font-style: normal;
+    font-display: swap;
     src: url("../fonts/Oswald Medium.woff2") format("woff2"),
       url("../fonts/Oswald Medium.woff") format("woff");
 }
