Исправление критерия Д7. Стайлгайд

--- a/source/less/blocks/before-after.less
+++ b/source/less/blocks/before-after.less
@@ -45,7 +45,7 @@
   }
 
   .before-after__text:active {
-    border-bottom: none;
+    border-bottom: 1px solid transparent;
   }
 
   .before-after__switch {
@@ -75,7 +75,7 @@
   }
 
   .before-after__switch-wrapper:active {
-    border: 1px solid  @set-bg-green;
+    border: 2px solid  @set-bg-green;
   }
 
   .before-after__switch-on {
