Правка ошибки валидатора

--- a/source/less/fonts.less
+++ b/source/less/fonts.less
@@ -12,6 +12,6 @@
   font-weight: bold;
   font-style: normal;
   font-display: swap;
-  src: url("../fonts/Oswald Medium.woff2") format("woff2"),
-    url("../fonts/Oswald Medium.woff") format("woff");
+  src: url("../fonts/Oswald-Medium.woff2") format("woff2"),
+    url("../fonts/Oswald-Medium.woff") format("woff");
 }
