Исправление критерия Д13. Переполнение контентом

--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -165,7 +165,15 @@
   }
 
   .example__expenses-text {
+    display: block;
+    width: 180px;
+    flex-shrink: 0;
     .set-margin(0, 0, 0, 0);
+  }
+
+  .example__expenses-number {
+    width: 135px;
+    flex-shrink: 0;
   }
 
   .example__image-wrapper {
