--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -137,6 +137,7 @@
 }
 
 .form__radio-indicator {
+  flex-shrink: 0;
   position: relative;
   width: 30px;
   height: 30px;
@@ -268,6 +269,7 @@
 }
 
 .form__checkbox-indicator {
+  flex-shrink: 0;
   line-height: 0;
   width: 30px;
   height: 30px;
