--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -5,7 +5,7 @@
 
 .map__block {
   min-width: 320px;
-  height: 364px;
+  min-height: 364px;
   position: relative;
   z-index: 1;
 }
@@ -31,7 +31,7 @@
   }
 
   .map__block {
-    height: 396px;
+    min-height: 396px;
   }
 
   .map__block::after {
