--- a/source/less/blocks/process.less
+++ b/source/less/blocks/process.less
@@ -95,7 +95,7 @@
     z-index: 2;
     flex-shrink: 0;
     width: 320px;
-    height: 228px;
+    min-height: 228px;
     .set-padding(113px, 0, 0, 0);
     .set-margin(0, 0, 88px, 0);
   }
