--- a/source/less/blocks/show-more.less
+++ b/source/less/blocks/show-more.less
@@ -50,7 +50,7 @@
     align-items: center;
     justify-content: flex-end;
     width: calc(384px - 60px);
-    height: 571px;
+    min-height: 571px;
     .set-margin(0, 30px, 0, 30px);
     background: none;
   }
