--- a/source/less/blocks/catalog-main.less
+++ b/source/less/blocks/catalog-main.less
@@ -79,6 +79,8 @@
   }
 
   .catalog-main__item {
+    display: flex;
+    justify-content: flex-end;
     border-bottom: none;
   }
 
@@ -88,7 +90,7 @@
     align-items: center;
     justify-content: flex-end;
     width: calc(384px - 60px);
-    height: 571px;
+    min-height: 571px;
     .set-margin(0, 30px, 0, 30px);
     .set-padding(40px, 0, 38px, 0);
     background: linear-gradient(to top, #f2f2f2 431px, transparent 431px);
@@ -109,7 +111,6 @@
   .catalog-main__image {
     width: 324px;
     height: 172px;
-    .set-margin(0, 0, 16px, 0);
   }
 
   .catalog-main__image--big {
