--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -45,7 +45,7 @@
 .promo__button {
   margin-top: auto;
   .set-padding(11px, 10px, 11px, 10px);
-  line-height: 18px;
+  line-height: 20px;
 }
 
 @media (min-width: @tablet-width) {
@@ -60,7 +60,7 @@
     .centerer();
     align-items: flex-start;
     min-height: 840px;
-    .set-padding(0, 30px, 0, 30px);
+    .set-padding(0, 30px, 50px, 30px);
     background-image: none;
   }
 
@@ -92,7 +92,6 @@
     margin-top: 0;
     .set-margin(0, 0, 0, 90px);
     .set-padding(17px, 27px, 17px, 27px);
-    line-height: 18px;
   }
 }
 
